antlrSA/SemanticAnalysisParser.py
# Generated from /Users/marialynne/PycharmProjects/SemanticAnalysis/antlrSA/SemanticAnalysis.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SemanticAnalysisParser ( Parser ):

    grammarFileName = "SemanticAnalysis.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'('", "')'", "'{'", "'}'", 
                     "','", "'sqrt'", "'**'", "'*'", "'/'", "'+'", "'-'", 
                     "'=='", "'>='", "'<='", "'const'", "'int'", "'float'", 
                     "'str'", "'if'", "'else'", "'while'", "'func'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CONST", "INT", "FLOAT", "STRING", "IF", 
                      "ELSE", "WHILE", "FUNC", "RETURN", "ID", "INTEGER", 
                      "DEC", "STR", "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_statement = 2
    RULE_function = 3
    RULE_ident = 4
    RULE_data_type = 5
    RULE_expr = 6

    ruleNames =  [ "program", "declaration", "statement", "function", "ident", 
                   "data_type", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    CONST=17
    INT=18
    FLOAT=19
    STRING=20
    IF=21
    ELSE=22
    WHILE=23
    FUNC=24
    RETURN=25
    ID=26
    INTEGER=27
    DEC=28
    STR=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.StatementContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.StatementContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.FunctionContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.FunctionContext,i)


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SemanticAnalysisParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1035862272) != 0):
                self.state = 17
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [17, 18, 19, 20]:
                    self.state = 14
                    self.declaration()
                    pass
                elif token in [8, 21, 23, 26, 27, 28, 29]:
                    self.state = 15
                    self.statement()
                    pass
                elif token in [24]:
                    self.state = 16
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConstDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(SemanticAnalysisParser.CONST, 0)
        def data_type(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.Data_typeContext,0)

        def ident(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def data_type(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.Data_typeContext,0)

        def ident(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = SemanticAnalysisParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                localctx = SemanticAnalysisParser.ConstDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.match(SemanticAnalysisParser.CONST)
                self.state = 23
                self.data_type()
                self.state = 24
                self.ident()
                self.state = 25
                self.match(SemanticAnalysisParser.T__0)
                pass
            elif token in [18, 19, 20]:
                localctx = SemanticAnalysisParser.VarDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.data_type()
                self.state = 28
                self.ident()
                self.state = 29
                self.match(SemanticAnalysisParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SemanticAnalysisParser.ID)
            else:
                return self.getToken(SemanticAnalysisParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(SemanticAnalysisParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.StatementContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class If_elseContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(SemanticAnalysisParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.StatementContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(SemanticAnalysisParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else" ):
                listener.enterIf_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else" ):
                listener.exitIf_else(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_else" ):
                return visitor.visitIf_else(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.ExprContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = SemanticAnalysisParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = SemanticAnalysisParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.expr(0)
                self.state = 34
                self.match(SemanticAnalysisParser.T__1)
                self.state = 35
                self.expr(0)
                self.state = 36
                self.match(SemanticAnalysisParser.T__0)
                pass

            elif la_ == 2:
                localctx = SemanticAnalysisParser.If_elseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.match(SemanticAnalysisParser.IF)
                self.state = 39
                self.match(SemanticAnalysisParser.T__2)
                self.state = 40
                self.expr(0)
                self.state = 41
                self.match(SemanticAnalysisParser.T__3)
                self.state = 42
                self.match(SemanticAnalysisParser.T__4)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1017118976) != 0):
                    self.state = 43
                    self.statement()
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 49
                self.match(SemanticAnalysisParser.T__5)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==22:
                    self.state = 50
                    self.match(SemanticAnalysisParser.ELSE)
                    self.state = 51
                    self.match(SemanticAnalysisParser.T__4)
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1017118976) != 0):
                        self.state = 52
                        self.statement()
                        self.state = 57
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 58
                    self.match(SemanticAnalysisParser.T__5)


                self.state = 61
                self.match(SemanticAnalysisParser.T__0)
                pass

            elif la_ == 3:
                localctx = SemanticAnalysisParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(SemanticAnalysisParser.WHILE)
                self.state = 64
                self.match(SemanticAnalysisParser.T__2)
                self.state = 65
                self.expr(0)
                self.state = 66
                self.match(SemanticAnalysisParser.T__3)
                self.state = 67
                self.match(SemanticAnalysisParser.T__4)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1017118976) != 0):
                    self.state = 68
                    self.statement()
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self.match(SemanticAnalysisParser.T__5)
                self.state = 75
                self.match(SemanticAnalysisParser.T__0)
                pass

            elif la_ == 4:
                localctx = SemanticAnalysisParser.FunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.match(SemanticAnalysisParser.ID)
                self.state = 78
                self.match(SemanticAnalysisParser.T__2)
                self.state = 90
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==26:
                        self.state = 79
                        self.match(SemanticAnalysisParser.ID)


                    pass

                elif la_ == 2:
                    self.state = 82
                    self.match(SemanticAnalysisParser.ID)
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 83
                        self.match(SemanticAnalysisParser.T__6)
                        self.state = 84
                        self.match(SemanticAnalysisParser.ID)
                        self.state = 89
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass


                self.state = 92
                self.match(SemanticAnalysisParser.T__3)
                self.state = 93
                self.match(SemanticAnalysisParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Func_defContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(SemanticAnalysisParser.FUNC, 0)
        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.Data_typeContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.Data_typeContext,i)

        def ID(self):
            return self.getToken(SemanticAnalysisParser.ID, 0)
        def RETURN(self):
            return self.getToken(SemanticAnalysisParser.RETURN, 0)
        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.IdentContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.IdentContext,i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.StatementContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.StatementContext,i)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.DeclarationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def" ):
                return visitor.visitFunc_def(self)
            else:
                return visitor.visitChildren(self)



    def function(self):

        localctx = SemanticAnalysisParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            localctx = SemanticAnalysisParser.Func_defContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(SemanticAnalysisParser.FUNC)
            self.state = 97
            self.data_type()
            self.state = 98
            self.match(SemanticAnalysisParser.ID)
            self.state = 99
            self.match(SemanticAnalysisParser.T__2)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 100
                self.data_type()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 101
                    self.ident()


                pass

            elif la_ == 2:
                self.state = 104
                self.data_type()
                self.state = 105
                self.ident()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 106
                    self.match(SemanticAnalysisParser.T__6)
                    self.state = 107
                    self.data_type()
                    self.state = 108
                    self.ident()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


            self.state = 117
            self.match(SemanticAnalysisParser.T__3)
            self.state = 118
            self.match(SemanticAnalysisParser.T__4)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1019085056) != 0):
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8, 21, 23, 26, 27, 28, 29]:
                    self.state = 119
                    self.statement()
                    pass
                elif token in [17, 18, 19, 20]:
                    self.state = 120
                    self.declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(SemanticAnalysisParser.RETURN)
            self.state = 127
            self.ident()
            self.state = 128
            self.match(SemanticAnalysisParser.T__0)
            self.state = 129
            self.match(SemanticAnalysisParser.T__5)
            self.state = 130
            self.match(SemanticAnalysisParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SemanticAnalysisParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,0)


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = SemanticAnalysisParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ident)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(SemanticAnalysisParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 133
                self.match(SemanticAnalysisParser.T__1)
                self.state = 134
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_data_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class String_dtContext(Data_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.Data_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SemanticAnalysisParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_dt" ):
                listener.enterString_dt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_dt" ):
                listener.exitString_dt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_dt" ):
                return visitor.visitString_dt(self)
            else:
                return visitor.visitChildren(self)


    class Float_dtContext(Data_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.Data_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(SemanticAnalysisParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat_dt" ):
                listener.enterFloat_dt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat_dt" ):
                listener.exitFloat_dt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat_dt" ):
                return visitor.visitFloat_dt(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(Data_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.Data_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(SemanticAnalysisParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def data_type(self):

        localctx = SemanticAnalysisParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_data_type)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                localctx = SemanticAnalysisParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(SemanticAnalysisParser.INT)
                pass
            elif token in [19]:
                localctx = SemanticAnalysisParser.Float_dtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(SemanticAnalysisParser.FLOAT)
                pass
            elif token in [20]:
                localctx = SemanticAnalysisParser.String_dtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(SemanticAnalysisParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SemanticAnalysisParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.ExprContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class SubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.ExprContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub" ):
                return visitor.visitSub(self)
            else:
                return visitor.visitChildren(self)


    class MultContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SemanticAnalysisParser.ExprContext)
            else:
                return self.getTypedRuleContext(SemanticAnalysisParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMult" ):
                listener.enterMult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMult" ):
                listener.exitMult(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMult" ):
                return visitor.visitMult(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self):
            return self.getToken(SemanticAnalysisParser.STR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class IntegerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(SemanticAnalysisParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class FloatContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SemanticAnalysisParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEC(self):
            return self.getToken(SemanticAnalysisParser.DEC, 0)
